Use the offical spark binaries Add additional jars for s3/minio access Initial loading of libraries and setting up Spark Session is working

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,9 @@ objgraph
 requests
 lxml
 pandas
-sqlalchemy
 pytest
-tika
 boto3
 botocore
-pymongo
 aiohttp
 minio
-tensorflow
-tensorflow-text
-pyspark
+findspark
